<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactInforActivity">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbarContact"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:padding="8dp"
        android:id="@+id/linearLayoutContact"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContact"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:weightSum="2"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="Tên cửa hàng"
                android:textStyle="bold|italic"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtOrderDetailId"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="Địa chỉ cửa hàng"
                android:textStyle="italic|bold"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtOrderDetaiLPrice"
                android:text="@string/shop_address"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Enail"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="italic|bold" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtOrderDetailAddress"
                android:text="@string/email_address"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="Điện thoại"
                android:textStyle="italic|bold"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtOrderDetailStatus"
                android:text="@string/phone_number"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="Website"
                android:textStyle="italic|bold"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtCreatedDateOrderDetail"
                android:text="https://lthdt.com.vn"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:id="@+id/view"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>
    <org.osmdroid.views.MapView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutContact"
        android:id="@+id/mapview"
        tilesource="Mapnik"
        android:background="@drawable/custom_map"
        android:layout_width="380dp"
        android:layout_height="380dp" />

</androidx.constraintlayout.widget.ConstraintLayout>